--- a/dhaka.html
+++ b/dhaka.html
@@ -23,7 +23,7 @@
                     <li><a href="main.html">Home</a></li>
                     <li><a href="service.html">Services </a></li>
                     <li><a href="contact.html"  class="li_active">Contact</a></li>
-                    <li><a href="contact.html">Our Team</a></li>
+                    <li><a href="team.html">Our Team</a></li>
                 </ul>
             </nav>
         </header>
@@ -33,43 +33,37 @@
                 <h1 class="title"><strong>NSP Property Management Services</strong><span>We are Canadian Based NSP Property Management Services in Bangladesh</span></h1>
             </div>
         </section>
-        <div class="contact_info">
-                <div class="pic_name" id="niaz">
-                    <img src="image/Pic.JPG">
-                    <p class="text-center"><strong>Captian Niaz Muhammad</strong></p>
-                </div>
-                <div class="mail_address">
-                    <div class="dhaka_add">
-                        <p>
-                            <span>Home Town Complex</span>
-                            <span>87 New Eskaton Road</span>
-                            <span>Unit : 11E (lift 11), Near Bangla Motor</span>
-                            <span>Dhaka – 1000, Bangladesh</span>
-                        </p>
-                        <p>
-                            <span>+880 1730578230</span>
-                            <span>+880 1730578231</span>
-                            <span>+880 1730578232</span>
-                            <span>+880 1730578233</span>
-                            <span>contact@nsppropertymanagement.com</span>
-                        </p>
-                    </div>
-                    <div class="email">
-                        <form class="contact_form" action="php/form.php" method="post">
-                            <div>
-                              <input name="name" type="text" class="form-control" id="inputName" placeholder="Name">
-                              <input name="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                            </div>
-                            <div>
-                                  <textarea name="message" class="form-control" rows="8" id="comment" placeholder="Type text here..."></textarea>                            
-                            </div>
-                            <div>
-                              <button type="submit" name="submit" class="btn btn-primary">Send Mail</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+        <div class="contact">
+            <div class="dhaka_add">
+                <p>
+                    <span>Home Town Complex</span>
+                    <span>87 New Eskaton Road</span>
+                    <span>Unit : 11E (lift 11), Near Bangla Motor</span>
+                    <span>Dhaka – 1000, Bangladesh</span>
+                </p>
+                <p>
+                    <span>+880 1730578230</span>
+                    <span>+880 1730578231</span>
+                    <span>+880 1730578232</span>
+                    <span>+880 1730578233</span>
+                    <span>contact@nsppropertymanagement.com</span>
+                </p>
             </div>
+            <div class="email">
+                <form class="contact_form" action="php/form.php" method="post">
+                    <div>
+                        <input name="name" type="text" class="form-control" id="inputName" placeholder="Name">
+                        <input name="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
+                    <div>
+                        <textarea name="message" class="form-control" rows="8" id="comment" placeholder="Type text here..."></textarea>                            
+                    </div>
+                    <div>
+                        <button type="submit" name="submit" class="btn btn-primary">Send Mail</button>
+                    </div>
+                </form>
+            </div>
+        </div>
         <footer>
             <img src="image/logo.PNG" alt="NPS logo" class="logo">
             <div class="footer_info">
