--- a/service.html
+++ b/service.html
@@ -23,7 +23,7 @@
                     <li><a href="main.html">Home</a></li>
                     <li><a href="service.html" class="li_active">Services </a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="contact.html">Our Team</a></li>
+                    <li><a href="team.html">Our Team</a></li>
                 </ul>
             </nav>
         </header>
