Updated, email should be working

--- a/dhaka.html
+++ b/dhaka.html
@@ -33,37 +33,43 @@
                 <h1 class="title"><strong>NSP Property Management Services</strong><span>We are Canadian Based NSP Property Management Services in Bangladesh</span></h1>
             </div>
         </section>
-        <div class="contact">
-            <div class="dhaka_add">
-                <p>
-                    <span>Home Town Complex</span>
-                    <span>87 New Eskaton Road</span>
-                    <span>Unit : 11E (lift 11), Near Bangla Motor</span>
-                    <span>Dhaka – 1000, Bangladesh</span>
-                </p>
-                <p>
-                    <span>+880 1730578230</span>
-                    <span>+880 1730578231</span>
-                    <span>+880 1730578232</span>
-                    <span>+880 1730578233</span>
-                    <span>contact@nsppropertymanagement.com</span>
-                </p>
+        <div id="dhaka_contact">
+            <div id="pic">
+                <img src="image/Pic.JPG" alt="niaz">
+                <p><strong>Capt Niaz Muhammad</strong></p>
             </div>
-            <div class="email">
-                <form class="contact_form" action="php/form.php" method="post">
-                    <div>
-                        <input name="name" type="text" class="form-control" id="inputName" placeholder="Name">
-                        <input name="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                    </div>
-                    <div>
-                        <textarea name="message" class="form-control" rows="8" id="comment" placeholder="Type text here..."></textarea>                            
-                    </div>
-                    <div>
-                        <button type="submit" name="submit" class="btn btn-primary">Send Mail</button>
-                    </div>
-                </form>
+            <div class="contact">
+                <div class="dhaka_add">
+                    <p>
+                        <span>Home Town Complex</span>
+                        <span>87 New Eskaton Road</span>
+                        <span>Unit : 11E (lift 11), Near Bangla Motor</span>
+                        <span>Dhaka – 1000, Bangladesh</span>
+                    </p>
+                    <p>
+                        <span>+880 1730578230</span>
+                        <span>+880 1730578231</span>
+                        <span>+880 1730578232</span>
+                        <span>+880 1730578233</span>
+                        <span>contact@nsppropertymanagement.com</span>
+                    </p>
+                </div>
+                <div class="email">
+                    <form class="contact_form" action="php/form.php" method="post">
+                        <div>
+                            <input name="name" type="text" class="form-control" id="inputName" placeholder="Name">
+                            <input name="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        </div>
+                        <div>
+                            <textarea name="message" class="form-control" rows="8" id="comment" placeholder="Type text here..."></textarea>                            
+                        </div>
+                        <div>
+                            <button type="submit" name="submit" class="btn btn-primary">Send Mail</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
+        </div>        
         <footer>
             <img src="image/logo.PNG" alt="NPS logo" class="logo">
             <div class="footer_info">
