--- a/sent.html
+++ b/sent.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="main.html">Home</a></li>
                     <li><a href="service.html">Services </a></li>
-                    <li><a href="contact.html" class="li_active">Contact</a></li>
+                    <li><a href="contact.html"  class="li_active">Contact</a></li>
                     <li><a href="team.html">Our Team</a></li>
                 </ul>
             </nav>
@@ -33,46 +33,9 @@
                 <h1 class="title"><strong>NSP Property Management Services</strong><span>We are Canadian Based NSP Property Management Services in Bangladesh</span></h1>
             </div>
         </section>
-        <div id="dhaka_contact">
-            <div id="pic">
-                <img src="image/nur.jpg" alt="nur">
-                <p><strong>Nur Mohammed</strong></p>
-            </div>
-            <div class="contact">
-                <div class="toronto_add">
-                    <p>
-                        <span><strong>Toronto Office:</strong></span>
-                        <span>3-2250 Markham Road</span>
-                        <span>Toronto, ON M1B 2W4</span>
-                        <span>Canada</span>
-                        <span>Office: 416-298-8383</span>
-                        <span>Fax: 416-298-8383</span>
-                    </p>
-                    <p>
-                        <span><strong>Mississauga Office:</strong></span>
-                        <span>127-350 Burnhamthorpe Road West</span>
-                        <span>Mississauga, ON L5B3J1</span>
-                        <span>Canada</span>
-                        <span>Office: 905-270-8100</span>
-                        <span>Fax: 905-270-8100</span>
-                    </p>
-                </div>
-                <div class="email">
-                    <form class="contact_form" action="php/form_nur.php" method="post">
-                        <div>
-                            <input name="name" type="text" class="form-control" id="inputName" placeholder="Name">
-                            <input name="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                        </div>
-                        <div>
-                            <textarea name="message" class="form-control" rows="8" id="comment" placeholder="Type text here..."></textarea>                            
-                        </div>
-                        <div>
-                            <button type="submit" name="submit" class="btn btn-primary">Send Mail</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>        
+        <div id="msg_sent">
+            <h2 class="title_2"><strong>Thank You for reaching us.</strong><span>Your email has been sent, and we will get back to you shortly.</span></h2>
+        </div>       
         <footer>
             <img src="image/logo.PNG" alt="NPS logo" class="logo">
             <div class="footer_info">
