--- a/service.html
+++ b/service.html
@@ -37,7 +37,7 @@
         <div class="service_des">
             <div class="service_text">
                 <h1 class="service_title"> Services Description </h1>
-                <p>We provide a trouble free property and security management maintenance service in Bangladesh. Managing and maintaining your ost valuable property/asset from being thousand of miles away is become a difficult while you are residing abroad but now a days management and maintenance has becoming a growing needs for you but we can assist to finding a right tanent, collecting monthly rents and taking utmost care of your property. The fact is that Asset/Property is your but jobs is ours. Our services might be higher than the others but we assure our quality of services, protecting your assets and we like to make sure that your asset turn into a granted money making machine.</p>
+                <p>We provide a trouble free property and security management maintenance service in Bangladesh. Managing and maintaining your most valuable property/asset from being thousand of miles away is become a difficult while you are residing abroad but now a days management and maintenance has becoming a growing needs for you but we can assist to finding a right tanent, collecting monthly rents and taking utmost care of your property. The fact is that Asset/Property is your but jobs is ours. Our services might be higher than the others but we assure our quality of services, protecting your assets and we like to make sure that your asset turn into a granted money making machine.</p>
             </div>
             <div class="duties">
                 <div class="duties_tasks">
