--- a/team.html
+++ b/team.html
@@ -44,10 +44,12 @@
                       <div class="overlay overlayLeft">
                         <div class="text-center" id="contact_msg">
                           <p>
-                            Cell: +880 173 057 8230
+                              <span>Cell: +880 173 057 8230</span> <br>
+                              <span>+880 177 754 3980</span>
                           </p>
                           <p>
-                            Email: contact@nsppropertymanagement.com
+                            Email: contact@nsppropertymanagement.com <br>
+                                   capt.niaz@nsppropertymanagement.com
                           </p>
                         </div>
                       </div>
@@ -81,7 +83,8 @@
                             Cell: +880 173 057 8231
                           </p>
                           <p>
-                            Email: alamin@nsppropertymanagement.com
+                            Email: contact@nsppropertymanagement.com <br>
+                              alamin@nsppropertymanagement.com
                           </p>
                         </div>
                       </div>
@@ -98,7 +101,8 @@
                             Cell: +880 173 057 8232
                           </p>
                           <p>
-                            Email: akik@nsppropertymanagement.com
+                            Email: contact@nsppropertymanagement.com <br>
+                              akik@nsppropertymanagement.com
                           </p>
                         </div>
                       </div>
