Updated the home page

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
             
             <nav>
                 <ul>
-                    <li><a href="main.html" class="li_active">Home</a></li>
+                    <li><a href="http://nsppropertymanagement.com/" class="li_active">Home</a></li>
                     <li><a href="service.html">Services </a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="team.html">Our Team</a></li>
