--- a/service.html
+++ b/service.html
@@ -20,7 +20,7 @@
             
             <nav>
                 <ul>
-                    <li><a href="main.html">Home</a></li>
+                    <li><a href="http://nsppropertymanagement.com/">Home</a></li>
                     <li><a href="service.html" class="li_active">Services </a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="team.html">Our Team</a></li>
