--- a/team.html
+++ b/team.html
@@ -20,7 +20,7 @@
             
             <nav>
                 <ul>
-                    <li><a href="main.html">Home</a></li>
+                    <li><a href="http://nsppropertymanagement.com/">Home</a></li>
                     <li><a href="service.html">Services </a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="team.html" class="li_active">Our Team</a></li>
