updated picture and added new member

--- a/team.html
+++ b/team.html
@@ -74,6 +74,24 @@
                     <h4 class="team-title">NUR MOHAMMED</h4>
                 </figure>
                 <figure>
+                    <h4 class="team-title">Head of Business Developments</h4>
+                    <div class="img_team">
+                      <img src="image/obaid.jpg" alt="amin">
+                      <div class="overlay overlayLeft">
+                        <div class="text-center" id="contact_msg">
+                          <p>
+                            Cell: +880 173 057 8232
+                          </p>
+                          <p>
+                            Email: contact@nsppropertymanagement.com <br>
+                              obaid@nsppropertymanagement.com
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <h4 class="team-title">Khan Obaidur Rahman</h4>
+                </figure>
+                <figure>
                     <h4 class="team-title">Head of Marketing</h4>
                     <div class="img_team">
                       <img src="image/Al-Amin.jpg" alt="amin">
